--- a/app/templates/control-panel/variant/list.html.twig
+++ b/app/templates/control-panel/variant/list.html.twig
@@ -73,6 +73,13 @@
                                     >
                                         <svg class="bi bi-08"><use xlink:href="#eye-fill"/></svg>
                                     </a>
+                                    <a
+                                        class="btn btn-primary rounded-5"
+                                        href="{{ absolute_url(path('cp_variant_builder', {variant: variant.id})) }}"
+                                        title="view"
+                                    >
+                                        <svg class="bi bi-08"><use xlink:href="#building-fill"/></svg>
+                                    </a>
                                 </td>
                             </tr>
 
