--- a/app/templates/landing-page/components/sections/header/fixed-top.html.twig
+++ b/app/templates/landing-page/components/sections/header/fixed-top.html.twig
@@ -20,7 +20,7 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav me-auto mb-2 mb-md-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#first-screen">What</a>
+                        <a class="nav-link active" aria-current="page" href="#home">What</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#features">Why</a>
@@ -39,13 +39,8 @@
                     </li>
                 </ul>
 
-                {% if app.request.get('_route') == 'app_homepage' %}
-                    {% include 'landing-page/components/buttons/subscription.html.twig' with {'classes': 'ms-auto'} %}
-                {% endif %}
+                {% include 'landing-page/components/buttons/subscription.html.twig' with {'classes': 'ms-auto'} %}
 
-                {% if app.user is null %}
-                    {% include 'landing-page/components/buttons/login.html.twig' with {'isLink': true} %}
-                {% endif %}
             </div>
 
         </div>
