add variant builder preview stub and first parts

--- a/app/public/assets/css/style.css
+++ b/app/public/assets/css/style.css
@@ -6,6 +6,8 @@ body {
 }
 
 #first-screen,
+#cover,
+#hero,
 #testimonialsCarousel,
 .pricing-2,
 .newsletter,
@@ -295,4 +297,9 @@ body {
 .border-primary {
     border-width: 0.1rem;
     border-color: var(--paletter-color-primary);
+}
+
+.header-brand-logo {
+    height: 2.1rem;
+    width: auto;
 }
