add builder data array

--- a/app/public/assets/css/style.css
+++ b/app/public/assets/css/style.css
@@ -9,7 +9,7 @@ body {
 #cover,
 #hero,
 #testimonialsCarousel,
-.pricing-2,
+.pricing-primary,
 .newsletter,
 #page-checkout,
 .bg-gradient-primary {
