--- a/app/templates/_parts/features/testLaunch.html.twig
+++ b/app/templates/_parts/features/testLaunch.html.twig
@@ -1,45 +1,29 @@
 <!-- Features Section -->
 <section id="features" class="features">
     <div class="container text-center">
+        {% if data.head is defined and data.head is not null and data.head|length > 0 %}
+            <div class="row">
+                <div class="col mb-5">
+                    <h2>{{ data.head }}</h2>
+                </div>
+            </div>
+        {% endif %}
+
         <div class="row">
 
-            <h2>We're here to help you feel better.</h2>
-
-            <div class="col-md-4">
-                <div class="feature-icon mb-3">
-                    <img
-                        class="img-fluid"
-                        src="{{ absolute_url(asset('undraw_organize_resume_re_k45b.svg', 'img')) }}"
-                        alt="icon"
-                    >
+            {% for feature in data.items %}
+                <div class="col-md-4">
+                    <div class="feature-icon mb-3">
+                        <img
+                            class="img-fluid"
+                            src="{{ absolute_url(asset( feature.thumb, 'img')) }}"
+                            alt="icon"
+                        >
+                    </div>
+                    <h4>{{ feature.head }}</h4>
+                    <p>{{ feature.description }}</p>
                 </div>
-                <h4>AI-Powered Optimization</h4>
-                <p>Our AI analyzes your experience and suggests improvements to make your resume stand out.</p>
-            </div>
-
-            <div class="col-md-4">
-                <div class="feature-icon mb-3">
-                    <img
-                        class="img-fluid"
-                        src="{{ absolute_url(asset('undraw_personal_information_re_vw8a.svg', 'img')) }}"
-                        alt="icon"
-                    >
-                </div>
-                <h4>Tailored to Job Descriptions</h4>
-                <p>Get personalized resume suggestions based on the job you’re applying for.</p>
-            </div>
-
-            <div class="col-md-4">
-                <div class="feature-icon mb-3">
-                    <img
-                        class="img-fluid"
-                        src="{{ absolute_url(asset('undraw_speed_test_re_pe1f.svg', 'img')) }}"
-                        alt="icon"
-                    >
-                </div>
-                <h4>Quick & Easy</h4>
-                <p>Create a professional resume in minutes with our user-friendly interface.</p>
-            </div>
+            {% endfor %}
 
         </div>
     </div>
