--- a/app/templates/_parts/hero/testLaunch.html.twig
+++ b/app/templates/_parts/hero/testLaunch.html.twig
@@ -4,17 +4,21 @@
         <div class="row justify-content-center align-items-center g-5">
 
             <div class="col-lg-6 text-start">
-                <h1 class="display-5 fw-bold lh-1 mb-3 text-white">Land Your Dream Job with an AI-Powered Resume</h1>
-                <p class="lead text-white">Let our AI create the perfect resume to showcase your skills and get you hired faster.</p>
+                <h1 class="display-5 fw-bold lh-1 mb-3 text-white">{{ data.head }}</h1>
+                <p class="lead text-white">{{ data.description }}</p>
                 <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-                    <button type="button" class="btn btn-light btn-lg px-2 me-md-2 rounded-5">Create Your Resume Now</button>
-                    {#                    <button type="button" class="btn btn-outline-light btn-lg px-2 me-md-2 rounded-5">Create Your Resume Now</button>#}
-                    {#                        <button type="button" class="btn btn-outline-secondary btn-lg px-4">More Info</button>#}
+                    <a
+                        href="{{ data.callToActionButton.link }}"
+                        type="button"
+                        class="btn btn-light btn-lg px-2 me-md-2 rounded-5"
+                    >
+                        {{ data.callToActionButton.text }}
+                    </a>
                 </div>
             </div>
             <div class="col-10 col-sm-8 col-lg-6 d-none d-md-block">
                 <img
-                    src="{{ absolute_url(asset('undraw_online_resume_re_ru7s.svg', 'img')) }}"
+                    src="{{ absolute_url(asset( data.thumb , 'img')) }}"
                     class="d-block mx-lg-auto img-fluid"
                     alt="creativity"
                     loading="lazy"
