--- a/app/templates/_parts/how-it-works/testLaunch.html.twig
+++ b/app/templates/_parts/how-it-works/testLaunch.html.twig
@@ -2,53 +2,29 @@
 <section id="how-it-works" class="how-it-works bg-light">
     <div class="container text-center">
 
-        <div class="row">
-            <div class="col mb-5">
-                <h2>How It Works</h2>
+        {% if data.head is defined and data.head is not null and data.head|length > 0 %}
+            <div class="row">
+                <div class="col mb-5">
+                    <h2>{{ data.head }}</h2>
+                </div>
             </div>
-        </div>
+        {% endif %}
 
-        <div class="row mb-5">
-            <div class="col-md-7">
-                <h2 class="featurette-heading fw-normal lh-1">1. Enter Your Details</h2>
-                <p class="lead">Provide us with your work history and skills.</p>
+        {% for step in data.items %}
+            <div class="row mb-5">
+                <div class="col-md-7 {% if loop.index % 2 == 0 %}order-md-2{% endif %}">
+                    <h2 class="featurette-heading fw-normal lh-1">{{ step.head }}</h2>
+                    <p class="lead">{{ step.description }}</p>
+                </div>
+                <div class="col-md-5 {% if loop.index % 2 == 0 %}order-md-1{% endif %}">
+                    <img
+                        class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
+                        src="{{ absolute_url(asset( step.thumb, 'img')) }}"
+                        alt="icon"
+                    >
+                </div>
             </div>
-            <div class="col-md-5">
-                <img
-                    class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
-                    src="{{ absolute_url(asset('undraw_details_8k13.svg', 'img')) }}"
-                    alt="icon"
-                >
-            </div>
-        </div>
-
-        <div class="row mb-5">
-            <div class="col-md-7 order-md-2">
-                <h2 class="featurette-heading fw-normal lh-1">2. Let the AI Work</h2>
-                <p class="lead">Our AI will analyze and enhance your resume content.</p>
-            </div>
-            <div class="col-md-5 order-md-1">
-                <img
-                    class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
-                    src="{{ absolute_url(asset('undraw_file_bundle_re_6q1e.svg', 'img')) }}"
-                    alt="icon"
-                >
-            </div>
-        </div>
-
-        <div class="row mb-5">
-            <div class="col-md-7">
-                <h2 class="featurette-heading fw-normal lh-1">3. Download & Apply</h2>
-                <p class="lead">Download your polished resume and start applying.</p>
-            </div>
-            <div class="col-md-5">
-                <img
-                    class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
-                    src="{{ absolute_url(asset('undraw_export_files_re_99ar.svg', 'img')) }}"
-                    alt="icon"
-                >
-            </div>
-        </div>
+        {% endfor %}
 
     </div>
 </section>
