--- a/app/templates/control-panel/variant/builder/sidebar/header.html.twig
+++ b/app/templates/control-panel/variant/builder/sidebar/header.html.twig
@@ -9,36 +9,12 @@
         aria-expanded="true"
         aria-controls="collapseHeaderBuilderForm"
     >
-        Header section
+        {{ builderForm.header.vars.label }}
     </button>
 
     <div class="collapse card mt-1 p-1" id="collapseHeaderBuilderForm">
 
-{#        <div class="form-check form-switch mb-3">#}
-{#            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" role="switch">#}
-{#            <label class="form-check-label" for="flexCheckDefault">#}
-{#                Enable#}
-{#            </label>#}
-{#        </div>#}
-
-        <div class="mb-3">
-            <label for="basic-url" class="form-label">Action button text</label>
-            <div class="input-group">
-                <input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3 basic-addon4">
-            </div>
-        </div>
-
-        <div class="mb-3">
-            <label for="basic-url" class="form-label">Logo Text</label>
-            <div class="input-group">
-                <input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3 basic-addon4">
-            </div>
-        </div>
-
-        <div class="input-group mb-3">
-            <label class="input-group-text" for="inputGroupFile01">Logo Image</label>
-            <input type="file" class="form-control" id="inputGroupFile01">
-        </div>
+        {{ form_row(builderForm.header, {'label' : false}) }}
 
     </div>
 </div>
