--- a/app/templates/control-panel/variant/builder/sidebar/navigation.html.twig
+++ b/app/templates/control-panel/variant/builder/sidebar/navigation.html.twig
@@ -9,59 +9,12 @@
         aria-expanded="true"
         aria-controls="collapseNavigationBuilderForm"
     >
-        Navigation section
+        {{ builderForm.navigationLinksText.vars.label }}
     </button>
 
     <div class="collapse card mt-1 p-1" id="collapseNavigationBuilderForm">
 
-        <div class="mb-3">
-            <label for="basic-url" class="form-label">Home</label>
-            <div class="input-group">
-                <input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3 basic-addon4" placeholder="text">
-            </div>
-        </div>
-
-        <div class="mb-3">
-            <label for="basic-url" class="form-label">Cover</label>
-            <div class="input-group">
-                <input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3 basic-addon4" placeholder="text">
-            </div>
-        </div>
-
-        <div class="mb-3">
-            <label for="basic-url" class="form-label">Features</label>
-            <div class="input-group">
-                <input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3 basic-addon4" placeholder="text">
-            </div>
-        </div>
-
-        <div class="mb-3">
-            <label for="basic-url" class="form-label">How it works</label>
-            <div class="input-group">
-                <input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3 basic-addon4" placeholder="text">
-            </div>
-        </div>
-
-        <div class="mb-3">
-            <label for="basic-url" class="form-label">Reviews</label>
-            <div class="input-group">
-                <input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3 basic-addon4" placeholder="text">
-            </div>
-        </div>
-
-        <div class="mb-3">
-            <label for="basic-url" class="form-label">Pricing</label>
-            <div class="input-group">
-                <input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3 basic-addon4" placeholder="text">
-            </div>
-        </div>
-
-        <div class="mb-3">
-            <label for="basic-url" class="form-label">Newsletter</label>
-            <div class="input-group">
-                <input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3 basic-addon4" placeholder="text">
-            </div>
-        </div>
+        {{ form_row(builderForm.navigationLinksText, {'label' : false}) }}
 
     </div>
 </div>
