--- a/app/templates/control-panel/variant/builder/index.html.twig
+++ b/app/templates/control-panel/variant/builder/index.html.twig
@@ -28,16 +28,12 @@
             >
 
                 {{ form_start(builderForm, {'method': 'POST'}) }}
-{#                <form#}
-{#                    class=""#}
-{#                    method="post"#}
-{#                    action="{{ absolute_url(path('cp_variant_builder', {'variant': variant.id})) }}"#}
-{#                >#}
+
                     {% include 'control-panel/variant/builder/sidebar/header.html.twig' %}
 
                     {% include 'control-panel/variant/builder/sidebar/navigation.html.twig' %}
 
-                    {% include 'control-panel/variant/builder/sidebar/cover.html.twig' %}
+                    {% include 'control-panel/variant/builder/sidebar/hero.html.twig' %}
 
                     {% include 'control-panel/variant/builder/sidebar/features.html.twig' %}
 
@@ -53,40 +49,22 @@
 
                     {% include 'control-panel/variant/builder/sidebar/design-settings.html.twig' %}
 
-                    <div class="d-flex flex-row justify-content-between">
-                        <button type="submit" class="btn btn-primary rounded-5 mt-3">Save</button>
-                        <button class="btn btn-primary rounded-5 mt-3">Preview</button>
+                    <div class="d-flex flex-row justify-content-between  mt-3">
+{#                        <button type="submit" name="actionBtn" value="save"#}
+{#                                class="btn btn-primary rounded-5">Save</button>#}
+{#                        <button type="submit" name="actionBtn" value="preview"#}
+{#                                class="btn btn-primary rounded-5">Preview</button>#}
+
+
+                        {{ form_row(builderForm.saveBtn) }}
+                        {{ form_row(builderForm.previewBtn) }}
+
                     </div>
-{#                </form>#}
 
                 {{ form_end(builderForm) }}
             </div>
 
             <div class="col-md-8 col-lg-9 p-0 overflow-hidden">
-{#                <div#}
-{#                    id="header"#}
-{#                    class="fixed-top"#}
-{#                    style="#}
-{#                        position: relative;#}
-{#                        z-index: 999;#}
-{#                    "#}
-{#                >#}
-{#                    {% include "landing-page/components/sections/header/fixed-top.html.twig" %}#}
-{#                </div>#}
-
-{#                {% include "landing-page/components/sections/first-screen/hero-with-button-and-cover.html.twig" %}#}
-
-{#                {% include "landing-page/components/sections/features/3-in-row.html.twig" %}#}
-
-{#                {% include "landing-page/components/sections/how-it-works/3-in-column-with-covers.html.twig" %}#}
-
-{#                {% include "landing-page/components/sections/testimonial/carousel.html.twig" %}#}
-
-{#                {% include "landing-page/components/sections/pricing/standard-3-in-row.html.twig" %}#}
-
-{#                {% include "landing-page/components/sections/newsletter/standard.html.twig" %}#}
-
-{#                {% include "landing-page/components/sections/footer/standard.html.twig" %}#}
 
                 <iframe
                     class="
