--- a/app/templates/control-panel/variant/builder/sidebar/footer.html.twig
+++ b/app/templates/control-panel/variant/builder/sidebar/footer.html.twig
@@ -9,94 +9,12 @@
         aria-expanded="true"
         aria-controls="collapseFooterBuilderForm"
     >
-        Footer section
+        {{ builderForm.footer.vars.label }}
     </button>
 
     <div class="collapse card mt-1 p-1" id="collapseFooterBuilderForm">
 
-{#        <div class="form-check form-switch mb-3">#}
-{#            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" role="switch">#}
-{#            <label class="form-check-label" for="flexCheckDefault">#}
-{#                Enable#}
-{#            </label>#}
-{#        </div>#}
-
-        <div class="mb-3">
-            <label for="basic-url" class="form-label">Copyright text</label>
-            <div class="input-group">
-                <input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3 basic-addon4">
-            </div>
-        </div>
-
-        <div class="mb-3">
-            <label for="basic-url" class="form-label">Privacy Policy full text</label>
-            <div class="input-group">
-                <textarea class="form-control" aria-label="With textarea"></textarea>
-            </div>
-        </div>
-
-        <div class="mb-3">
-            <label for="basic-url" class="form-label">Terms Of Service full text</label>
-            <div class="input-group">
-                <textarea class="form-control" aria-label="With textarea"></textarea>
-            </div>
-        </div>
-
-        <div class="mb-3">
-            <label for="basic-url" class="form-label">LinkedIn link</label>
-            <div class="input-group">
-                <input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3 basic-addon4">
-            </div>
-        </div>
-
-        <div class="mb-3">
-            <label for="basic-url" class="form-label">Instagram link</label>
-            <div class="input-group">
-                <input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3 basic-addon4">
-            </div>
-        </div>
-
-        <div class="mb-3">
-            <label for="basic-url" class="form-label">Messenger Link</label>
-            <div class="input-group">
-                <input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3 basic-addon4">
-            </div>
-        </div>
-
-        <div class="mb-3">
-            <label for="basic-url" class="form-label">Youtube Link</label>
-            <div class="input-group">
-                <input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3 basic-addon4">
-            </div>
-        </div>
-
-        <div class="mb-3">
-            <label for="basic-url" class="form-label">X (Twitter) Link</label>
-            <div class="input-group">
-                <input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3 basic-addon4">
-            </div>
-        </div>
-
-        <div class="mb-3">
-            <label for="basic-url" class="form-label">Instagram Link</label>
-            <div class="input-group">
-                <input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3 basic-addon4">
-            </div>
-        </div>
-
-        <div class="mb-3">
-            <label for="basic-url" class="form-label">TikTok Link</label>
-            <div class="input-group">
-                <input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3 basic-addon4">
-            </div>
-        </div>
-
-        <div class="mb-3">
-            <label for="basic-url" class="form-label">Facebook Link</label>
-            <div class="input-group">
-                <input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3 basic-addon4">
-            </div>
-        </div>
+        {{ form_row(builderForm.footer, {'label' : false}) }}
 
     </div>
 </div>
