--- a/app/templates/control-panel/variant/builder/sidebar/newsletter.html.twig
+++ b/app/templates/control-panel/variant/builder/sidebar/newsletter.html.twig
@@ -9,38 +9,12 @@
         aria-expanded="true"
         aria-controls="collapseNewsletterBuilderForm"
     >
-        Newsletter section
+        {{ builderForm.newsletter.vars.label }}
     </button>
 
     <div class="collapse card mt-1 p-1" id="collapseNewsletterBuilderForm">
 
-        <div class="form-check form-switch mb-3">
-            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" role="switch">
-            <label class="form-check-label" for="flexCheckDefault">
-                Enable
-            </label>
-        </div>
-
-        <div class="mb-3">
-            <label for="basic-url" class="form-label">Header text</label>
-            <div class="input-group">
-                <input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3 basic-addon4">
-            </div>
-        </div>
-
-        <div class="mb-3">
-            <label for="basic-url" class="form-label">Description text</label>
-            <div class="input-group">
-                <textarea class="form-control" aria-label="With textarea"></textarea>
-            </div>
-        </div>
-
-        <div class="mb-3">
-            <label for="basic-url" class="form-label">Action button Text</label>
-            <div class="input-group">
-                <input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3 basic-addon4">
-            </div>
-        </div>
+        {{ form_row(builderForm.newsletter, {'label' : false}) }}
 
     </div>
 </div>
