--- a/app/templates/control-panel/variant/builder/sidebar/subscriptions.html.twig
+++ b/app/templates/control-panel/variant/builder/sidebar/subscriptions.html.twig
@@ -9,105 +9,12 @@
         aria-expanded="true"
         aria-controls="collapseSubscriptionsBuilderForm"
     >
-        Subscriptions section
+        {{ builderForm.subscriptions.vars.label }}
     </button>
 
     <div class="collapse card mt-1 p-1" id="collapseSubscriptionsBuilderForm">
 
-        <div class="form-check form-switch mb-3">
-            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" role="switch">
-            <label class="form-check-label" for="flexCheckDefault">
-                Enable
-            </label>
-        </div>
-
-
-        <div class="mb-3">
-            <label for="basic-url" class="form-label">Plan 1 capture</label>
-            <div class="input-group">
-                <input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3 basic-addon4">
-            </div>
-        </div>
-
-        <div class="mb-3">
-            <label for="basic-url" class="form-label">Plan 1 description</label>
-            <div class="input-group">
-                <textarea class="form-control" aria-label="With textarea"></textarea>
-            </div>
-        </div>
-
-        <div class="mb-3">
-            <label for="basic-url" class="form-label">Plan 1 price</label>
-            <div class="input-group">
-                <input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3 basic-addon4">
-            </div>
-        </div>
-
-        <div class="mb-3">
-            <label for="basic-url" class="form-label">Plan 1 button text</label>
-            <div class="input-group">
-                <input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3 basic-addon4">
-            </div>
-        </div>
-
-        <div class="mb-3">
-            <label for="basic-url" class="form-label">Plan 2 capture</label>
-            <div class="input-group">
-                <input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3 basic-addon4">
-            </div>
-        </div>
-
-        <div class="mb-3">
-            <label for="basic-url" class="form-label">Plan 2 description</label>
-            <div class="input-group">
-                <textarea class="form-control" aria-label="With textarea"></textarea>
-            </div>
-        </div>
-
-        <div class="mb-3">
-            <label for="basic-url" class="form-label">Plan 2 price</label>
-            <div class="input-group">
-                <input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3 basic-addon4">
-            </div>
-        </div>
-
-        <div class="mb-3">
-            <label for="basic-url" class="form-label">Plan 2 button text</label>
-            <div class="input-group">
-                <input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3 basic-addon4">
-            </div>
-        </div>
-
-
-        <div class="mb-3">
-            <label for="basic-url" class="form-label">Plan 3 capture</label>
-            <div class="input-group">
-                <input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3 basic-addon4">
-            </div>
-        </div>
-
-        <div class="mb-3">
-            <label for="basic-url" class="form-label">Plan 3 description</label>
-            <div class="input-group">
-                <textarea class="form-control" aria-label="With textarea"></textarea>
-            </div>
-        </div>
-
-        <div class="mb-3">
-            <label for="basic-url" class="form-label">Plan 3 price</label>
-            <div class="input-group">
-                <input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3 basic-addon4">
-            </div>
-        </div>
-
-        <div class="mb-3">
-            <label for="basic-url" class="form-label">Plan 3 button text</label>
-            <div class="input-group">
-                <input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3 basic-addon4">
-            </div>
-        </div>
-
-
+        {{ form_row(builderForm.subscriptions, {'label' : false}) }}
 
     </div>
 </div>
