--- a/app/templates/landing-page/components/sections/pricing/standard-3-in-row.html.twig
+++ b/app/templates/landing-page/components/sections/pricing/standard-3-in-row.html.twig
@@ -25,7 +25,7 @@
             </div>
 
             <div class="col-md-4">
-                <div class="pricing-table pricing-2 text-white">
+                <div class="pricing-table pricing-primary text-white">
                     <h3>Pro</h3>
 
                     <p>5 Resume Templates</p>
